# Multi-Agent-Dashboard

./: .env.template  .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  config.py  dashboard.py  engine.py  llm_client.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: quickstart_feedback.md
config/: agents.yaml  logging.yaml  paths.yaml  providers.yaml  ui.yaml
data/migrations/: 000_create_base_tables.sql  001_add_agent_output_metadata.sql  002_add_runs_metadata.sql  003_normalize_agent_json.sql  004_add_agent_metrics.sql  005_fix_agent_outputs_constraints_REQUIRES_REBUILD.sql  006_add_input_output_costs.sql  007_add_agent_color_and_symbol.sql  008_add_tools_and_reasoning.sql  009_add_agent_run_configs.sql  (+12 more)
db/: db.py  generate_migration.py  migrations.py  schema.py  schema_diff.py  schema_diff_constraints.py  sqlite_rebuild.py
docs/: ARCHITECTURE.md  CONFIG.md  DATAFLOW.md  DEVELOPMENT.md  INSTALL.md  MIGRATIONS.md  OBSERVABILITY.md  TROUBLESHOOTING.md  USAGE.md
scripts/: quick_start.ps1  quick_start.sh
tests/: test_db_token_persistence_smoke.py  test_engine_content_blocks_and_profile.py  test_engine_persistence_instrumentation.py  test_litellm_client.py  test_litellm_endpoint.py  test_litellm_spam_prevention.py  test_llm_client_instrumentation_output.py  test_llm_client_langchain.py  test_multimodal_integration.py  test_provider_capabilities.py  test_provider_parity_and_persistence.py  test_provider_tool_adapter.py  test_schema_validation_flow.py  test_structured_output_adapter.py  test_structured_output_integration.py  test_usage_preservation.py  test_warning.py  test_web_search_fix.py
tools/: annotate_old_migrations.py
(+146 files in other folders)
