[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-dashboard"
version = "0.1.0"
description = "Streamlit-based dashboard for building and running multi-agent pipelines"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "graphviz==0.21",
    "langchain==1.2.4",
    "langchain-deepseek==1.0.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.7",
    "openai==2.9.0",
    "python-dotenv==1.2.1",
    "jsonschema==4.25.1",
    "streamlit==1.52.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
