[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-dashboard"
version = "0.1.0"
description = "Streamlit-based dashboard for building and running multi-agent pipelines"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4==4.14.3",
    "ddgs==9.10.0",
    "duckduckgo_search==8.1.1",
    "graphviz==0.21",
    "jsonschema==4.25.1",
    "langchain==1.2.7",
    "langchain-community==0.4.1",
    "langchain-deepseek==1.0.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.7",
    "markdownify==1.2.2",
    "openai==2.9.0",
    "python-dotenv==1.2.1",
    "pypdf==6.6.2",
    "streamlit==1.54",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
